--- a/tickets.html
+++ b/tickets.html
@@ -2,24 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SEIO - CRP: Billetterie</title>
+    <title>SEIO - CRP : Billetterie</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>
-        <div class="topnav" id="myTopnav">
-            <a href="index.html">Présentation</a>
-            <a href="tickets.html" class="active">Billetterie</a>
-            <a href="index.html#contact">Nous contacter</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-        </div>
+        <ul class="navbar">
+            <li class="navbar">
+                <a href="index.html" class="navbar active">Présentation</a>
+                <a href="tickets.html" class="navbar">Billetterie</a>
+                <a href="index.html#contact" class="navbar" onclick="className += 'active'">Nous contacter</a>
+            </li>
+        </ul>
         <h1>CRP Ouest 23</h1>
     </header>
     <section>
         Coucou la billetterie👋
     </section>
+    <footer>
+        <p>&copy; 2023 SEIO - Junior-Entreprise</p>
+        <div style="display: inline-block">
+            Téléphone :
+            <a href="tel:+33762563907" style="color: white">+33 (0)7 62 56 39 07</a>
+        </div>
+        <div style="display: inline-block">
+            Mail :
+            <a href="mailto:contact@seio.org" style="color: white">contact@seio.org</a>
+        </div>
+        <div style="display: inline-block">
+            Adresse :
+            <a href="https://www.google.com/maps?q=SEIO+Junior+Entreprise" style="color: white">10 Boulevard Jean Jeanneteau - 49107 Angers</a>
+        </div>
+        <div>
+            <a href="mentions.html" style="color: white">Mentions légales</a>
+        </div>
+    </footer>
 </body>
 </html>
