--- a/mentions.html
+++ b/mentions.html
@@ -9,7 +9,7 @@
     <header>
         <ul class="navbar">
             <li class="navbar">
-                <a href="index.html" class="navbar active">Présentation</a>
+                <a href="index.html" class="navbar">Présentation</a>
                 <a href="tickets.html" class="navbar">Billetterie</a>
                 <a href="index.html#contact" class="navbar" onclick="className += 'active'">Nous contacter</a>
             </li>
